fixed modal header overflowing

--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ aside {
     background-color: rgb(206, 171, 177);
     width: 500px;
     max-width: 80%;
+    padding: 1px;
 }
 
     .modal input , .modal select, .modal textarea{
@@ -173,6 +174,7 @@ aside {
         align-items: center;
         border-bottom: 1px solid black;
         background-color: rgb(181, 255, 233);
+        border-radius: 15px 15px 0px 0px;
     }
 
     .modalHeader .title {
